tests/ui/feature-gates/feature-gate-cfg-select.stderr
error[E0658]: use of unstable library feature `cfg_select`
  --> $DIR/feature-gate-cfg-select.rs:4:1
   |
LL | cfg_select! {
   | ^^^^^^^^^^
   |
   = note: see issue #115585 <https://github.com/rust-lang/rust/issues/115585> for more information
   = help: add `#![feature(cfg_select)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

warning: unknown lint: `unreachable_cfg_select_predicates`
  --> $DIR/feature-gate-cfg-select.rs:1:9
   |
LL | #![warn(unreachable_cfg_select_predicates)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the `unreachable_cfg_select_predicates` lint is unstable
   = note: see issue #115585 <https://github.com/rust-lang/rust/issues/115585> for more information
   = help: add `#![feature(cfg_select)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: `#[warn(unknown_lints)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
